made it so that spacing is done correctly on the login card

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-html {
+html
+{
     height: 100%;
 }
 body
@@ -24,4 +25,3 @@ body
     border-color: #d50032;
     border-width: medium;
 }
-
